--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       smooththreshold="5"
     >
       <a-entity
-        gltf-model="./scene.gltf"
+        gltf-model="./horse_statue_01_4k.gltf/horse_statue_01_4k.gltf"
         scale="5 5 5"
         position="150 300 -100"
       >
