--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <a-nft
       type="nft"
-      url="./nftMarker2"
+      url="./nftMarker2/qrcode"
       smooth="true"
       smoothcount="10"
       smoothtolerance="0.01"
