--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         
         <a-camera gps-camera rotation-reader></a-camera>
-	<a-entity gltf-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Avocado/glTF/Avocado.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 2.357820; latitude: 48.879620;" animation-mixer/>
+	<a-entity gltf-model="./magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 2.357820; latitude: 48.879620;" animation-mixer/>
 	</a-scene>
 </body>
 </html>
