--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-        <a-marker preset="hiro">
+        <a-marker preset="custom" type="pattern" url=".pattern-qrgen.patt">
             <a-entity
             position="0 0 0"
             rotation="0 0 0"
             scale="0.05 0.05 0.05"
-            gltf-model="../magnemite/scene.gltf"
+            gltf-model="./magnemite/scene.gltf"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
