--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-        <a-marker preset="custom" type="pattern" url="./pattern-qrgen.patt">
+        <a-marker preset="custom" type="pattern" url="./pattern-qrgen_small.patt">
             <a-entity
             position="0 0 0"
             rotation="-90 0 0"
