--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             position="0 0 0"
             rotation="-90 0 0"
             scale="0.1 0.1 0.1"
-            gltf-model="./magnemite/scene.gltf"
+            gltf-model="https://raw.githack.com/KhronosGroup/glTF-Sample-Models/master/2.0/CesiumMan/glTF/CesiumMan.gltf"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
