--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a-scene embedded arjs>
             
             <!-- QR Marker -- Guy walking -->
-        <a-marker preset="custom" type="pattern" url="./pattern-qrgen_small.patt">
+       <!-- <a-marker preset="custom" type="pattern" url="./pattern-qrgen_small.patt">
             <a-entity
             position="0 0 0"
             rotation="-90 0 0"
@@ -22,7 +22,7 @@
             gltf-model="./cesiumMan_glTF/CesiumMan.gltf"
             animation-mixer
             ></a-entity>
-        </a-marker>
+        </a-marker> -->
             
             <!-- Simple Marker -- Magnemite -->
         <a-marker preset="custom" type="pattern" url="./pattern-ELYX-hi.patt">
