--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </a-marker> -->
             
             <!-- Simple Marker -- Magnemite -->
-        <a-marker preset="custom" type="pattern" url="./pattern-ELYX-hi.patt">
+        <a-marker preset="hiro">
             <a-entity
             position="0 0 0"
             rotation="-90 0 0"
