--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </a-marker> -->
             
             <!-- Simple Marker -- Magnemite -->
-        <a-marker preset="hiro">
+        <a-marker preset="custom" type="pattern" url="./pattern-ELYX-hi.patt">
             <a-entity
             position="0 0 0"
             rotation="-90 0 0"
-            scale="1 1 1"
+            scale=".1 .1 .1"
             gltf-model="./magnemite/scene.gltf"
             animation-mixer
             ></a-entity>
