--- a/index.html
+++ b/index.html
@@ -14,23 +14,12 @@
         <a-scene embedded arjs>
             
             <!-- QR Marker -- Guy walking -->
-       <!-- <a-marker preset="custom" type="pattern" url="./pattern-qrgen_small.patt">
+        <a-marker preset="custom" type="pattern" url="./pattern-qrgen_small.patt">
             <a-entity
             position="0 0 0"
             rotation="-90 0 0"
             scale="1 1 1"
             gltf-model="./cesiumMan_glTF/CesiumMan.gltf"
-            animation-mixer
-            ></a-entity>
-        </a-marker> -->
-            
-            <!-- Simple Marker -- Magnemite -->
-        <a-marker preset="custom" type="pattern" url="./pattern-ELYX-hi.patt">
-            <a-entity
-            position="0 0 0"
-            rotation="-90 0 0"
-            scale=".1 .1 .1"
-            gltf-model="./magnemite/scene.gltf"
             animation-mixer
             ></a-entity>
         </a-marker>
